CreateAccountActivity firebase backend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GIH Bookmarks</string>
     <string name="sign_in">SIGN IN</string>
+    <string name="create_account">CREATE ACCOUNT</string>
 </resources>
